--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     }
   },
   "dependencies": {
+    "querystrings": "^0.4.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
